== Changelog ==

= 1.6.8 =
- Fixed: MailChimp Widget: failed subscription error.
- Fixed: WC_Cart->taxes is deprecated since version 3.2 error when oceanwp_woo_free_shipping_left shortcode is in use.

= 1.6.7 =
- Updated: Freemius SDK version.

= 1.6.6 =
- Fixed: Security issue - If $_REQUEST['_wpnonce'] is not set, it won't be checked.
- Fixed: Remove  5-star rating filter from review link.
- Fixed: PHP 7.4 notice - 'Trying to access array offset on value of type bool' in ocean-extra file.
- Fixed: jQuery notice - 'ready' function has been deprecated - metabox.js file.
- Updated: Freemius SDK version.

= 1.6.5 =
- Fixed: Data saving error - About Me widget.
- Removed: All affiliate links have been removed.

= 1.6.4 =
- Fixed: Missing Dependencies script 'butterbean'
- Fixed: Updated Mailchimp API
- Added: SEO Improvement - added "noopener noreferrer" tags when link opens in a new tab: Custom Links, About Me, Social Icons, Contact Info.
- Added: Accessibility Improvement - aria labels with warnings when link opens in a new tab: Custom Links, About Me, Social Icons, Contact Info.
- Added: Accessibility Improvement - aria-hidden on icons for following widgets: About Me, Social Icons, Contact Info.
- Added: Option to add a 'nofollow' link rel to following widgets: Custom Links, About Me, Social Icons, Contact Info.

= 1.6.3 =
- Fixed: Uncaught ReferenceError: butterbean is not defined
- Fixed: OceanWP javascripts doesn't execute on fast pages

= 1.6.2 =
- Fixed: [oceanwp_nav] error.

= 1.6.1 =
- Fixed: Shortocde [oceanwp_nav] is not working.

= 1.6.0 =
- Fixed: Freemius account details display.
- Added: Updated custom header nav widget with respect to theme for accessibitly.
- Updated: Freemius SDK for better account and license management.
- Fixed: [oceanwp_nav] shortcode mobile menu issue.
- Fixed: Theme Panel > Scripts & Styles - PHP 7.4 Warning message after disabling/enabling styles & scripts.