@@ -3,6 +3,7 @@
 = 1.6.8 =
 - Fixed: MailChimp Widget: failed subscription error.
 - Fixed: WC_Cart->taxes is deprecated since version 3.2 error when oceanwp_woo_free_shipping_left shortcode is in use.
+- Fixed: Broken demo images.
 
 = 1.6.7 =
 - Updated: Freemius SDK version.
